Code cleanup, starting on SystemData class in Cache.