@@ -116,7 +116,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr00(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
         final String subject = "Prerequisites for " + crsName;
 
@@ -149,7 +149,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr01(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
         final String subject = "Prerequisites for " + crsName;
 
@@ -177,7 +177,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr02(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
         final String subject = "Prerequisites for " + crsName;
 
@@ -205,7 +205,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr03(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
         final String subject = "Prerequisites for " + crsName;
 
@@ -243,7 +243,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr04(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
         final String subject = "Prerequisites for " + crsName;
 
@@ -276,7 +276,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr05(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
         final String subject = "Prerequisites for " + crsName;
 
@@ -308,7 +308,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr06(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
         final String subject = "Prerequisites for " + crsName;
 
@@ -350,7 +350,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr07(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
         final String subject = "Prerequisites for " + crsName;
 
@@ -404,7 +404,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr08(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
         final String subject = "Prerequisites for " + crsName;
 
@@ -436,7 +436,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr09(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
 
         final HtmlBuilder body = MsgUtils.simpleOpening(context.student);
@@ -465,7 +465,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr10(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
 
         final HtmlBuilder body = MsgUtils.simpleOpening(context.student);
@@ -495,7 +495,7 @@ enum LateMessagePrereqFactory1of1 {
     private static MessageToSend generatePREQpr11(final MessagingContext context,
                                                   final MessagingCourseStatus status) {
 
-        final String courseId = context.sortedRegs.get(0).course;
+        final String courseId = context.sortedRegs.getFirst().course;
         final String crsName = MsgUtils.courseName(courseId);
 
         final HtmlBuilder body = MsgUtils.simpleOpening(context.student);
