@@ -441,7 +441,7 @@ public final class PastLtaSession extends HtmlSessionBase {
             final Object[][] ans = new Object[numAns][];
             ans[0] = new Object[4];
 
-            String[] split = data.get(0).split(CoreConstants.COMMA);
+            String[] split = data.getFirst().split(CoreConstants.COMMA);
 
             if (split.length == 4) {
                 ans[0][0] = Long.valueOf(0L);
@@ -449,7 +449,7 @@ public final class PastLtaSession extends HtmlSessionBase {
                 ans[0][2] = ans[0][0];
                 ans[0][3] = ans[0][0];
             } else {
-                Log.warning("Updates file has invalid state line: ", data.get(0));
+                Log.warning("Updates file has invalid state line: ", data.getFirst());
                 ok = false;
             }
 
